--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,54 +1,14 @@
+#top {
+  justify-content: center;
+  align-items: center;
+}
+
 .input-group-rounded .input-group-field {
-    border-radius: 500px 0 0 500px;
-    padding-left: 1rem;
-    max-width: 50%;
-    justify-content: center;
-  }
-  
-  .input-group-rounded .input-group-button .button {
-    flex-wrap: wrap;
-    flex-direction: row;
-    border-radius: 0 500px 500px 0;
-    font-size: 0.8rem;
-    justify-content: center;
-  }
+  border-radius: 5000px 0 0 5000px;
+  padding-left: 1rem;
+}
 
-  #container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      flex-direction: row;
-  }
-
-  #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #b61924;
-    background-image: url("");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-  }
-  
-  /* ---- stats.js ---- */
-  
-  
-  .js-count-particles{
-    font-size: 1.1em;
-  }
-  
-  #stats,
-  .count-particles{
-    -webkit-user-select: none;
-  }
-  
-  #stats{
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-  }
-  
-  .count-particles{
-    border-radius: 0 0 3px 3px;
-  }
+.input-group-rounded .input-group-button .button {
+  border-radius: 0 5000px 5000px 0;
+  font-size: 0.8rem;
+}
