particle box expo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,8 @@
-#top {
-  justify-content: center;
-  align-items: center;
+body{
+  padding: 0%;
+  margin: 0%;
 }
 
-.input-group-rounded .input-group-field {
-  border-radius: 5000px 0 0 5000px;
-  padding-left: 1rem;
-}
-
-.input-group-rounded .input-group-button .button {
-  border-radius: 0 5000px 5000px 0;
-  font-size: 0.8rem;
+#particle-js{
+  height: 400px;
 }
