--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,84 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 50%; 
+    height: 100%;
+    width: 900px;
+    z-index: -1;
+    transform: translateX(-50%);
+    
+}
+
+form input,
+form button {
+    outline: none;
+    border: none;
+    padding: 1rem;
+    font-size: 1.6rem;
+    font-family: inherit;
+}
+form input {
+    width: 50%;
+    border-radius: 1rem 0 1rem 0;
+    margin-right: 3px;
+    border-bottom: 3px solid var(--color-primary);
+}
+
+form button {
+    background-color: var(--color-primary);
+    border: 1px solid transparent;
+    border-radius: 3px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+form button:hover {
+    border: 1px solid #fff;
+}
+
+#result {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    padding: 3rem 0;
+}
+
+.songs {
+    width: 70%;
+    list-style: none;
+    margin:0 auto;
+    padding: 2rem 0;
+}
+
+.songs li {
+    font-size: 1.4rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.songs li span{
+    font-size: 1.4rem;
+    background-color: red;
+    padding: 5px;
+    margin: 5px;
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+
 
 #top {
     justify-content: center;
