--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,14 +158,15 @@ footer {
 }
 
 canvas {
-  display: block;
-  vertical-align: bottom;
+  vertical-align: top;
+  z-index: 1;
 }
 
 /* ---- particles.js container ---- */
 
 #particles-js {
   position: absolute;
+  z-index: 0;
   width: 100%;
   height: 100%;
   background-color: rgb(100, 10, 18);
@@ -178,6 +179,7 @@ canvas {
 /* ---- stats.js ---- */
 
 .count-particles{
+    z-index: 1;
   background: #000022;
   position: absolute;
   top: 48px;
