new style non particle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,4 @@
 * {
-  padding: 0;
-  box-sizing: border-box;
-}
-/* added transparent background */
-body::after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 50%; 
-  height: 100%;
-  width: 900px;
-  z-index: -1;
-}
-
-#top {
-  justify-content: center;
-  align-items: center;
-}
-
-.top-bar{
-  background-color: black;
-}
-
-.menu-text{
-  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-}
-
-.input-group-rounded .input-group-field {
-  border-radius: 5000px 0 0 5000px;
-  padding-left: 1rem;
-}
-
-.input-group-rounded .input-group-button .button {
-  border-radius: 0 5000px 5000px 0;
-  font-size: 0.8rem;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -62,7 +27,7 @@ body::after {
     background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
 }
 
-#historyBtn{
+#myBtn{
     background: linear-gradient(to right, orange , yellow, green, cyan, blue, violet);
     border: 1px solid transparent;
     border-radius: 3px;
@@ -70,6 +35,44 @@ body::after {
     cursor: pointer;
     font-size: 1rem;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: grey;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 
 .input-group-rounded .input-group-field {
     border-radius: 5000px 0 0 5000px;
@@ -132,13 +135,13 @@ button:hover {
 
 /* added a flex and centered the searched results from js  */
 .songs li {
-  font-size: 1.4rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px 0;
-  border-bottom: 1px solid #eee;
+    font-size: 1.4rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0;
+    border-bottom: 1px solid #eee;
 }
 
 /* styled the get lyrics button from js */
@@ -156,6 +159,8 @@ footer {
     background-color: black;
     color: yellow;
 }
+
+
 
 canvas {
   vertical-align: top;
