--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,7 @@ button:hover {
     margin: 0 auto;
     text-align: center;
     padding: 3rem 0;
+
 }
 
 /* element from js */
@@ -167,6 +168,9 @@ button:hover {
 footer {
     background-color: black;
     color: yellow;
+    position:fixed;
+    bottom:0;
+    width:100vw;
 }
 
 
@@ -180,7 +184,7 @@ canvas {
 
 #particles-js {
   position: absolute;
-  z-index: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background-color: rgb(100, 10, 18);
