--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,20 +11,27 @@ body::after {
     left: 50%; 
     height: 100%;
     width: 900px;
-    z-index: -1;
+    position: relative;
+  z-index: 2;
 }
 
 #top {
     justify-content: center;
     align-items: center;
+    position: relative;
+  z-index: 2;
 }
 
 .top-bar{
     background-color: black;
+    position: relative;
+  z-index: 2;
 }
 
 .menu-text{
     background-image: wheat;
+    position: relative;
+  z-index: 2;
 }
 
 #myBtn{
@@ -34,6 +41,8 @@ body::after {
     font-weight: 600;
     cursor: pointer;
     font-size: 1rem;
+    position: relative;
+  z-index: 2;
 }
 
 button {
@@ -43,6 +52,8 @@ button {
     font-weight: 600;
     cursor: pointer;
     font-size: 1rem;
+    position: relative;
+  z-index: 2;
 }
 
 .modal {
@@ -56,6 +67,7 @@ button {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background: white;
   }
   
   /* Modal Content/Box */
@@ -65,6 +77,7 @@ button {
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
+    background:white;
   }
   
   /* The Close Button */
@@ -86,11 +99,15 @@ button {
 .input-group-rounded .input-group-field {
     border-radius: 5000px 0 0 5000px;
     padding-left: 1rem;
+    position: relative;
+  z-index: 2;
 }
   
 .input-group-rounded .input-group-button .button {
     border-radius: 0 5000px 5000px 0;
     font-size: 0.8rem;
+    position: relative;
+  z-index: 2;
 }
 
 /* styled the form input and button */
@@ -101,6 +118,8 @@ button {
     padding: 1rem;
     font-size: 1.6rem;
     font-family: inherit;
+    position: relative;
+    z-index: 2;
 }
 /* further styled the input */
 form input {
@@ -108,6 +127,8 @@ form input {
     border-radius: 1rem 0 1rem 0;
     margin-right: 3px;
     border-bottom: 3px solid var(--color-primary);
+    position: relative;
+  z-index: 2;
 }
 
 /* added rainbow background and styled the button  */
@@ -117,6 +138,8 @@ form input {
     border-radius: 3px;
     font-weight: 700;
     cursor: pointer;
+    position: relative;
+  z-index: 2;
 }
 
 /* when hover on the button, ease in */
@@ -124,6 +147,8 @@ button:hover {
     border: 1px solid #fff;
     font-size: 20px;
     transition: all .2s ease-in-out;
+    position: relative;
+  z-index: 2;
 }
 
 /* styled the lyrics box  */
@@ -132,6 +157,8 @@ button:hover {
     margin: 0 auto;
     text-align: center;
     padding: 3rem 0;
+    position: relative;
+  z-index: 2;
 }
 
 /* element from js */
@@ -140,6 +167,8 @@ button:hover {
     list-style: none;
     margin:0 auto;
     padding: 2rem 0;
+    position: relative;
+  z-index: 2;
 }
 
 /* added a flex and centered the searched results from js  */
@@ -151,6 +180,8 @@ button:hover {
     align-items: center;
     padding: 5px 0;
     border-bottom: 1px solid #eee;
+    position: relative;
+  z-index: 2;
 }
 
 /* styled the get lyrics button from js */
@@ -162,11 +193,15 @@ button:hover {
     outline: none;
     border-radius: 5px;
     cursor: pointer;
+    position: relative;
+  z-index: 2;
 }
 
 footer {
     background-color: black;
     color: yellow;
+    position: relative;
+  z-index: 2;
 }
 
 
@@ -174,6 +209,7 @@ footer {
 canvas {
   vertical-align: top;
   z-index: 1;
+  background: transparent;
 }
 
 /* ---- particles.js container ---- */
